refactor(core): Resolve initialization deadlock via DI and events
This commit resolves a critical initialization deadlock where managers (HttpManager, RedisManager) required a logger instance before the core framework was fully ready. This created a brittle, untestable circular dependency.
The new architecture addresses this with two key changes:
Dependency Injection (DI): All managers now receive their dependencies (logger, contextManager) through their constructors, decoupling them from the global singleton.
Event-Driven Lifecycle: A new LifecycleManager now orchestrates the startup sequence using a state machine and events ('ready', 'error'). This makes the initialization process robust, predictable, and asynchronous. SyntropyLog now serves as a clean Facade.
This massive architectural change required a full stabilization of the "safety net." The entire test suite (over 80 failing tests) was methodically repaired to align with the new DI pattern, ensuring all unit and integration tests are now passing.
Finally, this also addresses the MaskingEngine ReDoS vulnerability. A temporary workaround using native RegExp.prototype.test() was implemented to fix a persistent test timeout, with a FIXME added to find a more robust long-term solution.

--- a/examples/80-full-stack-nats/docker-compose.yaml
+++ b/examples/80-full-stack-nats/docker-compose.yaml
@@ -7,38 +7,32 @@ services:
       - "4222:4222"
 
   api-gateway:
-    build:
-      context: ../..
-      dockerfile: examples/80-full-stack-nats/Dockerfile
-    working_dir: /app/examples/80-full-stack-nats
-    command: sh -c "npm run build && npm run start:api-gateway"
+    image: node:18-alpine
+    command: sh -c "node dist/examples/80-full-stack-nats/src/api-gateway/index.js"
     ports:
       - "3000:3000"
     volumes:
       - ../..:/app
+    working_dir: /app
     depends_on:
       - nats-server
 
   sales-service:
-    build:
-      context: ../..
-      dockerfile: examples/80-full-stack-nats/Dockerfile
-    working_dir: /app/examples/80-full-stack-nats
-    command: sh -c "npm run build && npm run start:sales-service"
+    image: node:18-alpine
+    command: sh -c "node dist/examples/80-full-stack-nats/src/sales-service/index.js"
     ports:
       - "3001:3001"
     volumes:
       - ../..:/app
+    working_dir: /app
     depends_on:
       - nats-server
 
   dispatch-service:
-    build:
-      context: ../..
-      dockerfile: examples/80-full-stack-nats/Dockerfile
-    working_dir: /app/examples/80-full-stack-nats
-    command: sh -c "npm run build && npm run start:dispatch-service"
+    image: node:18-alpine
+    command: sh -c "node dist/examples/80-full-stack-nats/src/dispatch-service/index.js"
     volumes:
       - ../..:/app
+    working_dir: /app
     depends_on:
       - nats-server 
