--- a/examples/80-full-stack-nats/Dockerfile
+++ b/examples/80-full-stack-nats/Dockerfile
@@ -1,17 +1,5 @@
-# Use a Node.js base image
+# Use a Node.js base image with alpine for a smaller size
 FROM node:18-alpine
 
-# Set the working directory in the container
-WORKDIR /app
-
-# Copy package.json and package-lock.json to leverage Docker cache
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy the rest of the application's code
-COPY . .
-
-# The command to run the services will be provided by docker-compose
-CMD ["npm", "run", "start"] 
+# Set the working directory
+WORKDIR /app 
