--- a/package.json
+++ b/package.json
@@ -119,17 +119,18 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@redis/client": "^1.5.14",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@redis/client": "^1.5.14",
     "@types/inquirer": "^9.0.7",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.5",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "depcheck": "^1.4.7",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.1.0",
@@ -142,8 +143,7 @@
     "rollup-plugin-dts": "^6.1.0",
     "tslib": "^2.6.2",
     "typescript": "^5.8.3",
-    "vitest": "^1.1.0",
-    "@vitest/coverage-v8": "^1.1.0"
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "redis": "^4.6.12"
